# magic-wormhole.rs

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  MAINTENANCE.md  README.md  changelog.md  deny.toml  libsodium-build-notes.md  nested-example.rs  shell.nix  sonar-project.properties  wormhole.1
.circleci/: config.yml
.github/workflows/: audit.yml  push.yml
cli/: Cargo.toml  README.md
cli/src/: completer.rs  main.rs  reedline.rs  util.rs
cli/tests/: cli_tests.rs
cli/tests/cmd/: basic.stderr  basic.toml  forward.stderr  forward.toml  help.stdout  help.toml  receive-help.stdout  receive-help.toml  send-help.stdout  send-help.toml  send-invalid-file.stderr  send-invalid-file.toml  send-many-help.stdout  send-many-help.toml  send-many.stderr  send-many.toml  send-message-help.stdout  send-message-help.toml  send-message.stderr  send-message.toml  send.stderr  send.toml
core/: Cargo.toml
core/examples/: readline.rs  ws.rs
core/src/: allocator.rs  api.rs  boss.rs  code.rs  events.rs  input.rs  inputhelper.rs  key.rs  lib.rs  lister.rs  mailbox.rs  nameplate.rs  order.rs  pgpwords.json  receive.rs  rendezvous.rs  send.rs  server_messages.rs  terminator.rs  test.rs  traits.rs  transfer.rs  util.rs  wordlist.rs
examples/: readline-core.rs  receive-blocking.rs  receive-file-blocking.rs  receive-text-blocking.rs  send-blocking.rs  send-file-blocking.rs  send-text-blocking.rs  test-file-blocking-rust2rust.rs  test-file-rust2rust.rs  test_file.txt  test_file_ar.txt  test_file_long.txt  ws-core.rs
io/blocking/: Cargo.toml
io/blocking/examples/: receive.rs  send.rs
io/blocking/src/: blocking.rs  lib.rs
io/tokio/: Cargo.toml
io/ws/: Cargo.toml
io/ws/examples/: receive.rs
io/ws/src/: lib.rs
src/: core.rs  dilation.rs  filetransfer.rs  forwarding.rs  io.rs  lib.rs  main.rs  transfer.rs  transit.rs  uri.rs  util.rs
src/core/: allocator.rs  api.rs  boss.rs  code.rs  events.rs  input.rs  io.rs  key.rs  lib.rs  lister.rs  mailbox.rs  mod.rs  nameplate.rs  order.rs  protocol.rs  receive.rs  rendezvous.rs  running.rs  send.rs  server_messages.rs  terminator.rs  test.rs  timing.rs  traits.rs  transfer.rs  util.rs  wordlist.rs
src/dilated_transfer/: mod.rs
src/dilation/: api.rs  connection.rs  connector.rs  events.rs  manager.rs  mod.rs
src/io/: blocking.rs  mod.rs
src/io/blocking/: blocking.rs  filetransfer.rs  mod.rs  transit.rs
src/transfer/: cancel.rs  messages.rs  offer.rs  v1.rs  v2.rs
src/transit/: crypto.rs  transport.rs
wasm/: Cargo.toml
wasm/src/: event.rs  lib.rs
wip-examples/: two.rs
