[workspace]
members = [".", "cli"]
default-members = ["cli"]

[workspace.package]
version = "0.7.1"
authors = [
    "Fina Wilke <code@felinira.net>",
    "piegames <info@piegames.de>",
    "Brian Warner <warner@lothar.com>",
]
description = "Get things from one computer to another, safely"
keywords = ["magic-wormhole", "wormhole", "file-transfer", "transfer"]
homepage = "http://magic-wormhole.io/"
repository = "https://github.com/magic-wormhole/magic-wormhole.rs/tree/main/cli"
license = "EUPL-1.2"

rust-version = "1.75"
edition = "2021"

[package]
name = "magic-wormhole"
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/magic-wormhole/latest/"
readme = "README.md"

version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

rust-version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
serde = { version = "1.0.120", features = ["rc"] }
serde_json = "1.0.61"
serde_derive = "1.0.120"
crypto_secretbox = "0.1.1"
spake2 = "0.4.0"
sha-1 = "0.10.0"
sha2 = "0.10.0"
hkdf = "0.12.2"
hex = { version = "0.4.2", features = ["serde"] }
rand = "0.8.0"
log = "0.4.13"
base64 = "0.22.0"
time = { version = "0.3.7", features = ["formatting"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

derive_more = { version = "0.99.0", default-features = false, features = [
    "display",
    "deref",
    "from",
] }
thiserror = "1.0.24"

futures = "0.3.12"
url = { version = "2.2.2", features = ["serde"] }
percent-encoding = { version = "2.1.0" }

# Transit dependencies


stun_codec = { version = "0.3.0", optional = true }
bytecodec = { version = "0.4.15", optional = true }
noise-rust-crypto = { version = "0.6.0-rc.1", optional = true }
async-trait = { version = "0.1.57", optional = true }
noise-protocol = { version = "0.2", optional = true }
# Transfer dependencies

rmp-serde = { version = "1.0.0", optional = true }
tar = { version = "0.4.33", optional = true }

# Forwarding dependencies

# rmp-serde = … # defined above

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc = "0.2.101"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "0.27", features = ["async-std-runtime"] }
async-io = "2.2.0"

# Transit

socket2 = { version = "0.5.0", optional = true, features = ["all"] }
if-addrs = { version = "0.13", optional = true }

# Transfer

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-timer = "0.2.5"
ws_stream_wasm = "0.7.3"
getrandom = { version = "0.2.5", features = ["js"] }

# for some tests
[dev-dependencies]
env_logger = "0.11"
eyre = "0.6.5"

[features]

transfer = ["transit", "dep:tar", "dep:rmp-serde"]
transit = [
    "dep:noise-rust-crypto",
    "dep:noise-protocol",
    "dep:socket2",
    "dep:stun_codec",
    "dep:if-addrs",
    "dep:bytecodec",
    "dep:async-trait",
]
forwarding = ["transit", "dep:rmp-serde"]
default = ["transit", "transfer"]
all = ["default", "forwarding"]

# TLS implementations for websocket connections via async-tungstenite
# required for optional wss connection to the mailbox server
tls = ["async-tungstenite/async-tls"]
native-tls = ["async-tungstenite/async-native-tls"]
# Enable experimental transfer-v2 support. The protocol is not yet finalized and is subject to change.
# By enabling this option you are opting out of semver stability.
experimental-transfer-v2 = []
experimental = ["experimental-transfer-v2"]

[profile.release]
overflow-checks = true
strip = "debuginfo"
lto = "thin"
