[package]
name = "wormhole-rs"
version = "0.6.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.120", features = ["rc"] }
serde_json = "1.0.61"
serde_derive = "1.0.120"
log = "0.4.13"
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.12"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
rand = "0.8.3"

# CLI specific dependencies
magic-wormhole = { path = "..", features = ["all"] }
clap = { version = "4", features = ["cargo", "derive", "help"] }
clap_complete = "4"
env_logger = "0.11"
console = "0.15.0"
indicatif = "0.17.0"
dialoguer = "0.11"
color-eyre = "0.6.0"
number_prefix = "0.4.0"
ctrlc = "3.2.1"
qr2term = "0.3.0"
arboard = { version = "3.2.0", features = [
    "wayland-data-control",
] } # Wayland by default, fallback to X11.

[dev-dependencies]
trycmd = "0.15"
