[package]
name = "magic-wormhole-cli"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "wormhole-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.120", features = ["rc"] }
serde_json = "1.0.61"
serde_derive = "1.0.120"
log = "0.4.13"
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.12"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
rand = "0.8.3"

# CLI specific dependencies
magic-wormhole = { path = "..", version = "0.7", features = ["all"] }
clap_mangen = { version = "0.2", optional = true }
clap = { version = "4", features = ["cargo", "derive", "help"] }
clap_complete = "4"
env_logger = "0.11"
console = "0.15.0"
indicatif = "0.17.0"
dialoguer = "0.11"
color-eyre = "0.6.0"
number_prefix = "0.4.0"
ctrlc = "3.2.1"
qr2term = "0.3.0"
arboard = { version = "3.2.0", features = [
    "wayland-data-control",
] } # Wayland by default, fallback to X11.

[dev-dependencies]
trycmd = "0.15"

[features]
# TLS implementations for websocket connections via async-tungstenite
# required for optional wss connection to the mailbox server
tls = ["magic-wormhole/tls"]
native-tls = ["magic-wormhole/native-tls"]
# Enable experimental transfer-v2 support. The protocol is not yet finalized and is subject to change.
experimental-transfer-v2 = ["magic-wormhole/experimental-transfer-v2"]
experimental = ["experimental-transfer-v2"]

default = ["magic-wormhole/default", "magic-wormhole/forwarding"]
all = ["default", "magic-wormhole/native-tls"]
generate-manpage = ["dep:clap_mangen"]
