[package]
name = "magic-wormhole-cli"
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "wormhole-rs"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_derive = { workspace = true }
url = { workspace = true, features = ["serde"] }
futures = { workspace = true }
async-std = { workspace = true, features = ["attributes", "unstable"] }
rand = { workspace = true }

# CLI specific dependencies
magic-wormhole = { path = "..", version = "0.8.0-alpha.1", features = ["all"] }
clap = { workspace = true, features = ["cargo", "derive", "help", "env"] }
clap_complete = { workspace = true }
env_logger = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true, features = ["completion"] }
color-eyre = { workspace = true }
number_prefix = { workspace = true }
ctrlc = { workspace = true }
qr2term = { workspace = true }
arboard = { optional = true, workspace = true, features = [
    "wayland-data-control",
] } # Wayland by default, fallback to X11.
tracing = { workspace = true, features = ["log", "log-always"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
trycmd = { workspace = true }

[features]
clipboard = ["dep:arboard"]
# TLS implementations for websocket connections via async-tungstenite
# required for optional wss connection to the mailbox server
tls = ["magic-wormhole/tls"]
native-tls = ["magic-wormhole/native-tls"]
# Enable experimental transfer-v2 support. The protocol is not yet finalized and is subject to change.
experimental-transfer-v2 = ["magic-wormhole/experimental-transfer-v2"]
experimental = ["experimental-transfer-v2"]

default = ["clipboard", "magic-wormhole/default", "magic-wormhole/forwarding"]
all = ["default", "magic-wormhole/native-tls"]
