[package]
name = "magic-wormhole-core"
version = "0.0.1"
authors = ["Brian Warner <warner@lothar.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sodiumoxide = "0.0.16"
spake2 = "0.1.0"
sha2 = "0.7"
hkdf = "0.6.0"
hex = "0.3"
rand = "0.5"
rustc-serialize = "0.3"
regex = "1.0"


[dev-dependencies]
ws = "0.7"
url = "1.7"
rustyline = "2.0"
parking_lot = {version = "0.6", features = ["deadlock_detection"]}
