[package]
name = "magic-wormhole-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
log = "0.4.17"

getrandom = { version = "0.1", features = ["wasm-bindgen"] }
url = { version = "2.2.2", features = ["serde"] }
clear_on_drop = { version = "0.2.5", features = ["no_cc"] }
magic-wormhole = { path = ".." }
web-sys = { version = "0.3.57", features = ["Blob"] }
js-sys = "0.3.57"
futures-util = "0.3.21"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
